# LearningPython

./: .gitignore  app.py  pyproject.toml
ConfigParser_ex/: config.ini  main.py  pyproject.toml  uut_flow_data
DoublyLinkedList/: dll_example.py  double_linked_list.py
PubSub/: pubsub.py
PySide6_/CountDownCircle/: countdowncircle.py
PySide6_/Promote_Widget_Example/: Makefile  keypad_example.py  keypad_widget.py  keypad_widget.ui  mainview.py  mainview.ui  ui_keypad_widget.py  ui_mainview.py
PySide6_/QMessageBox_/: app.py
PySide6_/QPainter_/: QPainter_Example.py  ui_mainwindow.py  ui_mainwindow.ui
PySide6_/QThreading_/: main.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  progress_widget.py  progress_widget.ui  progress_widget_ui.py  worker.py
PySide6_/StudentGradeBook/: Makefile  gradebook.py  mainwindow.py  resources.qrc  resources_rc.py  validators.py
TinyDBExamples/: assembly_query.py  cecil_assemblies.json  countries.json  create_db.py
click_ex/: script1.py
config_example1/: config.py  config.toml
decorators/: example_1.py
descriptors/: employee.py  point.py  validator.py
dotty/: Korean Spring Motor.json  dotify.py  dotify_algorithim.umd3  dotify_v2.py  dotify_v3.py  json_load.py  spring_motor.json
lunarlander/: scene.py
misc/: search_methods.py
openpyxl_/: 234300-3 Robot Quote Log.xlsx  example_001.py
sets/: myset.py
sqlmodel_/: app.py  database.db
subprocess_/: ex_1.py
tkinter_/: fileio.py  mainwindow.py  tkinter_app.py
tkinter_lab/: assemblies.py  listitem.py  mainwindow.py  menu.py  tkinter_app.py
(+109 files in other folders)
