[project]
name = "learningpython"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bpython>=0.26",
    "click>=8.1.8",
    "config>=0.5.1",
    "darkdetect>=0.8.0",
    "humanize>=4.12.3",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "platformdirs>=4.3.7",
    "pymupdf>=1.26.0",
    "pyside6>=6.9.0",
    "python-dateutil>=2.9.0.post0",
    "qdarkstyle>=3.2.3",
    "returns>=0.25.0",
    "sqlmodel>=0.0.33",
    "sv-ttk>=2.6.1",
    "tinydb>=4.8.2",
    "ttkbootstrap>=1.14.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "icecream>=2.1.4",
    "ruff>=0.11.6",
]
